--- a/index.css
+++ b/index.css
@@ -15,3 +15,19 @@
 .main div:hover {
     background-color: rgb(174, 209, 209);
 }
+
+.bl{
+    border-left: 0;
+}
+
+.bt{
+    border-top: 0;
+}
+
+.br{
+    border-right:0;
+}
+
+.bb{
+    border-bottom:0;
+}
